[gd_scene load_steps=4 format=3 uid="uid://b5w23rk57vsng"]

[ext_resource type="Script" uid="uid://unb5ud81btlj" path="res://objects/wheel/wheel.gd" id="1_0yigv"]
[ext_resource type="PackedScene" uid="uid://cykb38cjy1rp6" path="res://objects/action/action.tscn" id="1_8d8xq"]
[ext_resource type="PackedScene" uid="uid://cunsuhq6ishlo" path="res://objects/wheel/wheel_core.tscn" id="1_k5tsx"]

[node name="Wheel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1122.0
offset_bottom = -763.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0yigv")

[node name="ActionA" parent="." node_paths=PackedStringArray("activation_object", "activation_slice") instance=ExtResource("1_8d8xq")]
layout_mode = 0
offset_left = 1.0
offset_top = 20.0
offset_right = 83.0
offset_bottom = 78.0
activation_object = NodePath("../WheelCore")
activation_slice = NodePath("../WheelCore/VBoxContainer/Frame/SliceCapA")
id_string = "ACT A"
activation_flavor = 2

[node name="ActionB" parent="." node_paths=PackedStringArray("activation_object", "activation_slice") instance=ExtResource("1_8d8xq")]
layout_mode = 0
offset_left = 235.0
offset_top = 20.0
offset_right = 317.0
offset_bottom = 78.0
activation_object = NodePath("../WheelCore")
activation_index = 1
activation_slice = NodePath("../WheelCore/VBoxContainer/Frame/SliceCapB")
id_string = "ACT B"
activation_flavor = 2

[node name="ActionC" parent="." node_paths=PackedStringArray("activation_object", "activation_slice") instance=ExtResource("1_8d8xq")]
layout_mode = 0
offset_left = 235.0
offset_top = 78.0
offset_right = 317.0
offset_bottom = 136.0
activation_object = NodePath("../WheelCore")
activation_index = 2
activation_slice = NodePath("../WheelCore/VBoxContainer/Frame/SliceCapC")
id_string = "ACT C"
activation_flavor = 2

[node name="ActionD" parent="." node_paths=PackedStringArray("activation_object", "activation_slice") instance=ExtResource("1_8d8xq")]
layout_mode = 0
offset_left = 1.0
offset_top = 77.0
offset_right = 83.0
offset_bottom = 135.0
activation_object = NodePath("../WheelCore")
activation_index = 3
activation_slice = NodePath("../WheelCore/VBoxContainer/Frame/SliceCapD")
id_string = "ACT D"
activation_flavor = 2

[node name="WheelCore" parent="." instance=ExtResource("1_k5tsx")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
display_name = "WHL 100 TEST_WHEEL"
